--- a/public/style/main.css
+++ b/public/style/main.css
@@ -20,6 +20,10 @@ button {
   color: #333;
 }
 
+img {
+  max-width: 100%;
+}
+
 .flex {
   display: flex;
 }
@@ -82,6 +86,15 @@ button {
 }
 .board-command:hover {
   text-decoration: underline;
+}
+
+.info-building__image {
+  max-width: 128px;
+  max-height: 128px;
+}
+.info-resource__image {
+  max-width: 24px;
+  max-height: 24px;
 }
 
 @media only screen and (max-width: 767px) {
