--- a/public/style/main.css
+++ b/public/style/main.css
@@ -80,6 +80,11 @@ img {
   flex-basis: 30%;
   background: #f9f9f9;
 }
+.sidebar__section {
+  padding-bottom: 1em;
+  margin-bottom: 1em;
+  border-bottom: 1px solid #eeeeee;
+}
 
 .board-command {
   cursor: pointer;
@@ -102,17 +107,27 @@ img {
   flex-wrap: wrap;
 }
 .tool {
-  width: 32px;
-  height: 32px;
-  border: 2px solid #ccc;
-  margin: 2px;
+  width: 48px;
+  height: 48px;
+  padding: 7px;
+  margin: 3px;
+  border: 3px solid #ccc;
+  border-radius: 2px;
   background-color: #eeeeee;
+  background-size: cover;
+  background-position: center center;
   cursor: pointer;
 }
 .tool--selected {
-  background-color: #2196f3;
+  /*background-color: #2196f3;*/
   border-color: #1976d2;
   color: white;
+}
+.tool--road {
+  background-image: url('../images/board/tools/tool-road.png');
+}
+.tool--view {
+  background-image: url('../images/board/tools/tool-view.png');
 }
 
 
