--- a/public/style/main.css
+++ b/public/style/main.css
@@ -68,9 +68,7 @@ img {
   cursor: pointer;
 }
 
-.board {
 
-}
 .map-container {
   flex-grow: 1;
   flex-basis: 70%;
@@ -86,6 +84,20 @@ img {
   border-bottom: 1px solid #eeeeee;
 }
 
+.waiting {
+  padding: 5em;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+  font-size: 2em;
+}
+.board {
+
+}
 .board-command {
   cursor: pointer;
 }
