--- a/public/style/main.css
+++ b/public/style/main.css
@@ -74,23 +74,6 @@ img {
 .pointer {
   cursor: pointer;
 }
-
-
-.map-container {
-  flex-grow: 1;
-  flex-basis: 70%;
-}
-.sidebar {
-  flex-grow: 1;
-  flex-basis: 30%;
-  background: #f9f9f9;
-}
-.sidebar__section {
-  padding-bottom: 1em;
-  margin-bottom: 1em;
-  border-bottom: 1px solid #eeeeee;
-}
-
 .waiting {
   padding: 5em;
   text-align: center;
@@ -102,14 +85,33 @@ img {
   background: #fff;
   font-size: 1.2em;
 }
-.board {
 
+.board {
+  position: relative;
+  display: flex;
+  min-height: 100vh;
 }
 .board-command {
   cursor: pointer;
 }
 .board-command:hover {
   text-decoration: underline;
+}
+
+.map-container {
+  flex-basis: 70%;
+  flex-grow: 1;
+  position: relative;
+}
+.sidebar {
+  flex-basis: 30%;
+  flex-grow: 1;
+  background: #f9f9f9;
+}
+.sidebar__section {
+  padding-bottom: 1em;
+  margin-bottom: 1em;
+  border-bottom: 1px solid #eeeeee;
 }
 
 .info-building__image {
@@ -202,7 +204,8 @@ img {
 
 
 @media only screen and (max-width: 767px) {
-  .flex {
+  .flex,
+  .board {
     flex-direction: column;
   }
 }
