--- a/public/style/main.css
+++ b/public/style/main.css
@@ -117,6 +117,19 @@ img {
   border-bottom: 1px solid #eeeeee;
 }
 
+.resources {
+  display: flex;
+  flex-wrap: wrap;
+}
+.resources__image {
+  max-width: 32px;
+  max-height: 32px;
+}
+.resources__container {
+  text-align: center;
+  display: none;
+}
+
 .info-building__image {
   max-width: 128px;
   max-height: 128px;
