--- a/public/style/main.css
+++ b/public/style/main.css
@@ -172,6 +172,9 @@ img {
 .tool--station {
   background-image: url('../images/board/tools/tool-station.png');
 }
+.tool--subway {
+  background-image: url('../images/board/tools/tool-subway.png');
+}
 .tool--view {
   background-image: url('../images/board/tools/tool-view.png');
 }
