--- a/public/style/main.css
+++ b/public/style/main.css
@@ -115,7 +115,6 @@ img {
 .sidebar {
   flex-basis: 30%;
   flex-grow: 1;
-  background: #f9f9f9;
 }
 .sidebar__section {
   padding-bottom: 1em;
@@ -143,6 +142,12 @@ img {
 .info-resource__image {
   max-width: 24px;
   max-height: 24px;
+}
+
+
+.info-selection {
+  background-color: #f4f4f4;
+  padding: 1em;
 }
 
 .tools{
